# mcp-marketplace

./: CONTRIBUTING.md  LICENSE  README.md
.claude-plugin/: marketplace.json
plugins/agentnetwork/: CLAUDE_DESKTOP.md  gemini-extension.json
plugins/agentnetwork/.claude-plugin/: plugin.json
plugins/agentnetwork/hooks/: hooks.json  session-start.js  session-start.sh
plugins/agentnetwork/scripts/: an-mcp.js  an-mcp.py  inbox.js  inbox.py  local_test.js  local_test.py  project_context.js  project_context.py  setup.js  setup.py
plugins/claude-wall-monitor/: .mcp.json  README.md
plugins/claude-wall-monitor/.claude-plugin/: plugin.json
plugins/cwallmonitor/: .mcp.json  README.md  gemini-extension.json
plugins/cwallmonitor/.claude-plugin/: plugin.json
plugins/cwallmonitor/server/: .gitignore  README.md  cwm-mcp  install.sh
plugins/cwallmonitor/server/py/: README.md  pyproject.toml
plugins/cwallmonitor/server/py/src/cwm_mcp/: __init__.py  __main__.py  auth.py  config.py  creds.py  devlog.py  gemini_oauth_client.py  leader.py  logbuf.py  mdns.py  ota.py  serial_tailer.py  state.py  usage.py
plugins/cwallmonitor/server/py/src/cwm_mcp/broker/: server.py
plugins/cwallmonitor/server/py/src/cwm_mcp/mcp/: server.py
plugins/cwallmonitor/server/py/src/cwm_mcp/registry/: crypto.py  store.py
plugins/cwallmonitor/server/py/tests/: test_auth_vectors.py  test_crypto_vectors.py  test_devlog.py  test_ota_vectors.py  test_registry_round_trip.py
plugins/humanoverflow/.claude-plugin/: plugin.json
plugins/humanoverflow/hooks/: hooks.json  session-start.sh
(+105 files in other folders)
