[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwm-mcp-py"
version = "0.4.0"
description = "Python implementation of cwm-mcp: HTTP credentials broker + MCP server for the Claude Wall Monitor ESP32"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Fractal Manifold" }]
dependencies = [
    "aiohttp>=3.9",
    "cryptography>=42",
    "tomli-w>=1.0",
    "zeroconf>=0.131",
    "pyserial>=3.5",
    "mcp>=1.0",
]

[project.scripts]
cwm-mcp-py = "cwm_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
